# lightning

./: Cargo.toml  README.md  crates.js  rust.yml  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml  rustdoc.yaml  rustdoc.yml
implementors/lightning_memops/: trait.Policy.js
implementors/num_enum/: trait.TryFromPrimitive.js
lightning/: all.html  fn.hostname.html  fn.initialize_logger.html  index.html  sidebar-items.js
lightning-codegen/: Cargo.toml
lightning-codegen/src/: compile.rs  generate.rs  instance.rs  kernel.rs  lib.rs  types.rs
lightning-core/: Cargo.toml
lightning-core/src/: accessor.rs  data_type.rs  info.rs  lib.rs  prelude.rs
lightning-core/src/geom/: affine.rs  dim.rs  mod.rs  permutate.rs  point.rs  rect.rs  transform.rs  translate.rs
lightning-core/src/util/: array.rs  as_any.rs  clone_cell.rs  counter.rs  drop_guard.rs  future.rs  group_by.rs  inline_bytebuf.rs  intrusive_list.rs  mod.rs  ordered_queue.rs  tcell.rs
lightning-cuda/: Cargo.toml
lightning-cuda/src/: context.rs  copy.rs  device.rs  error.rs  event.rs  lib.rs  mem.rs  module.rs  prelude.rs  profiler.rs  stream.rs
lightning-memops/: Cargo.toml
lightning-memops/src/: lib.rs  reduction.rs
lightning-memops/src/cuda/: copy.rs  elementwise.rs  fill.rs  mod.rs  reduce.rs
lightning-memops/src/host/: fill.rs  mod.rs  reduce.rs
lightning/api/: enum.SliceDescriptor.html  fn.execute.html  index.html  sidebar-items.js  struct.Array.html  struct.ArrayView.html  struct.Context.html  struct.CudaKernel.html  struct.CudaKernelBuilder.html  struct.CudaLauncherBuilder.html  struct.Event.html  struct.RegionIterator.html  trait.ArrayIndex.html  trait.ArraySlice.html  trait.KernelArg.html  trait.KernelArgs.html  trait.Shape.html  (+1 more)
lightning_codegen/: all.html  constant.CPP_NAMESPACE.html  enum.KernelArg.html  enum.KernelArrayDimension.html  enum.KernelParam.html  enum.KernelSpecializationPolicy.html  fn.make_valid_ident.html  index.html  sidebar-items.js  struct.Kernel.html  struct.KernelConfig.html  struct.KernelDef.html  struct.ModuleDef.html
lightning_core/: all.html  constant.DTYPE_BYTE.html  constant.DTYPE_DOUBLE.html  constant.DTYPE_DOUBLE2.html  constant.DTYPE_F32.html  constant.DTYPE_F64.html  constant.DTYPE_FLOAT.html  constant.DTYPE_FLOAT2.html  constant.DTYPE_FLOAT3.html  constant.DTYPE_FLOAT4.html  constant.DTYPE_I16.html  constant.DTYPE_I32.html  constant.DTYPE_I64.html  constant.DTYPE_I8.html  constant.DTYPE_INT.html  constant.DTYPE_LONG.html  constant.DTYPE_SHORT.html  constant.DTYPE_U16.html  constant.DTYPE_U32.html  constant.DTYPE_U64.html  constant.DTYPE_U8.html  constant.MAX_DIMS.html  enum.ComplexType.html  enum.PrimitiveType.html  index.html  macro.try_block!.html  macro.try_block.html  sidebar-items.js  static.DTYPE_SIZE_T.html  struct.CastError.html  struct.DataType.html  struct.DataValue.html  struct.KeyValuePair.html  trait.HasDataType.html  trait.One.html  trait.Zero.html  type.Affine.html  type.AffineN.html  type.AffineNM.html  type.Dim.html  (+45 more)
lightning_cuda/: all.html  fn.init.html  fn.version.html  index.html  sidebar-items.js
lightning_memops/: all.html  enum.ReductionFunction.html  fn.cuda_copy.html  fn.cuda_fill.html  fn.cuda_fold.html  fn.cuda_reduce.html  fn.host_copy.html  fn.host_fill.html  fn.host_fold.html  fn.host_reduce.html  index.html  sidebar-items.js  struct.MemOpsKernelsCache.html  struct.RayonPolicy.html  struct.Reduction.html  struct.SequentialPolicy.html  trait.Policy.html
resources/: lightning.h
scripts/: visualize_plan.py
src/: lib.rs  prelude.rs
(+905 files in other folders)
