[package]
authors = ["stijn <s.heldens@esciencecenter.nl>"]
edition = "2018"
name = "lightning"
version = "0.1.0"

[dependencies]
anyhow = "1.0.33"
arrayvec = "0.6.0"
bincode = "1.3.1"
build_id = "0.2.1"
bumpalo = { version = "3.7.0", features = ["collections"]}
by_address = "1.0"
crossbeam = "0.8.0"
cuda-driver-sys = "0.3"
env_logger = "0.8.2"
fxhash = "0.2"
hostname = "0.3.1"
indexmap = { version = "1.6.1", features = ["std"]}
itertools = "0.9.0"
lazy_static = "1.4.0"
lightning-core = { path = "lightning-core" }
lightning-cuda = { path = "lightning-cuda", features = ["serde"]}
lightning-memops = { path = "lightning-memops" }
lightning-codegen = { path = "lightning-codegen" }
log = "0.4.11"
lru = "0.6.5"
mpi-sys = "0.1.2"
parking_lot = "0.11.0"
partition = "0.1.2"
ptr-union = "2.1"
rand = { version = "0.8", features = ["small_rng"]}
rayon = "1.5.0"
rc-borrow = "1.4.0"
serde = { version = "1.0", features = ["derive"]}
serde_bytes = "0.11.5"
serde_json = "1.0.64"
slotmap = { version = "1.0", features = ["serde"]}
smallvec = { version = "1.6.1", features = ["union", "serde"]}
tempfile = "3.1.0"
thiserror = "1.0.21"
threadpool = "1.8.1"


[profile.release]
lto = true
opt-level = 3
panic = "abort"

[workspace]
members = [
    "lightning-core",
    "lightning-cuda",
    "lightning-memops",
    "lightning-codegen",
]
